--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+ant.customtasks.libs=JWSAntTasks
 application.title=Oslo
 application.vendor=601891
 build.classes.dir=${build.dir}/classes
@@ -32,8 +33,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.Slick2D.classpath}:\
-    ${libs.LWJGL-2.8.5.classpath}
+    ${libs.LWJGL-2.8.5.classpath}:\
+    ${libs.Slick2D.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +78,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path="C:\\Program Files\\NetBeans 7.3 Beta\\lwjgl-2.8.5\\lwjgl-2.8.5\\lwjgl-2.8.5\\native\\windows"
+run.jvmargs=-Djava.library.path=C:\\Users\\Jeremy\\Dropbox\\lwjgl-2.8.5\\lwjgl-2.8.5\\lwjgl-2.8.5\\native\\windows
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
